Decouple from `com.google.testing.compile:compile-testing` by reimplement the subset of functionality that is required